--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -7,6 +7,7 @@
     tools:context=".LogInActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="@dimen/width_0"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_8"
@@ -31,28 +32,29 @@
                 android:id="@+id/etUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:hint="@string/username"
+                android:inputType="text"
                 android:textColorHighlight="#000"
                 android:textSize="@dimen/text_size"
-                android:layout_marginBottom="10dp"
-                android:inputType="text"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/TextInputPass"
-            app:hintTextAppearance="@style/TextInput"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:hintTextAppearance="@style/TextInput">
 
             <EditText
+                android:id="@+id/etPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
+                android:inputType="textPassword"
                 android:textColorHighlight="#000"
                 android:textSize="@dimen/text_size"
-                android:textStyle="bold"
-                android:inputType="textPassword"/>
+                android:textStyle="bold" />
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
@@ -117,6 +119,17 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="@dimen/margin_guideline_17" />
+
+    <CheckBox
+        android:id="@+id/checkBoxRemember"
+        android:layout_width="@dimen/width_0"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_8"
+        android:layout_marginBottom="@dimen/margin_8"
+        android:text="@string/remember"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>
 
 
 </android.support.constraint.ConstraintLayout>
