put rotated image in storage and show the books searched in index activity

--- a/app/src/main/res/layout/content_index.xml
+++ b/app/src/main/res/layout/content_index.xml
@@ -8,4 +8,10 @@
     tools:context=".IndexActivity"
     tools:showIn="@layout/app_bar_index">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvBooks"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
+
 </android.support.constraint.ConstraintLayout>
