--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -136,7 +136,7 @@
                 android:layout_marginEnd="@dimen/margin_8"
                 android:layout_marginBottom="@dimen/margin_8"
                 android:background="@drawable/rounded_button"
-                android:onClick="btnRetakePic"
+                android:onClick="btnTakePic"
                 android:text="SELECT" />
         </LinearLayout>
     </LinearLayout>
