--- a/app/src/main/res/layout/app_bar_index.xml
+++ b/app/src/main/res/layout/app_bar_index.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_menu_camera"
-        android:onClick="btnOpenCamera"/>
+        app:srcCompat="@drawable/ic_search_white"
+        android:onClick="btnSearchBook"/>
 
 </android.support.design.widget.CoordinatorLayout>
