--- a/app/src/main/res/layout/app_bar_index.xml
+++ b/app/src/main/res/layout/app_bar_index.xml
@@ -20,7 +20,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_index" />
+
+    <include layout="@layout/content_index"
+        android:id="@+id/content_index"/>
+    <include layout="@layout/content_result"
+        android:id="@+id/content_result"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
