--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -12,7 +12,7 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/ivBookPhoto"
@@ -30,10 +30,11 @@
 
         <TextView
             android:id="@+id/tvBookTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="20dp"
+            android:layout_marginStart="5dp"
             android:text="@string/book_title"
             android:textSize="@dimen/text_size"
             app:layout_constraintEnd_toStartOf="@+id/guideline8"
@@ -42,10 +43,11 @@
 
         <TextView
             android:id="@+id/tvBookAuthor"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
+            android:layout_marginStart="5dp"
             android:text="@string/author"
             android:textSize="@dimen/text_size"
             app:layout_constraintEnd_toStartOf="@+id/guideline8"
@@ -91,6 +93,31 @@
             android:scaleType="fitXY"
             app:layout_constraintEnd_toStartOf="@+id/guideline8"
             app:layout_constraintTop_toTopOf="@+id/guideline10" />
+
+        <RatingBar
+            android:id="@+id/ratingBar"
+            style="?android:attr/ratingBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:numStars="5"
+            android:stepSize="0.5"
+            app:layout_constraintBottom_toTopOf="@+id/guideline9"
+            app:layout_constraintEnd_toStartOf="@+id/guideline8" />
+
+        <ImageButton
+            android:id="@+id/imageButtonExpand"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline9"
+            app:layout_constraintStart_toEndOf="@+id/ivBookPhoto"
+            android:src="@drawable/ic_expand"
+            android:background="@android:color/transparent"
+            />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
