--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,6 +7,23 @@
     tools:context=".SearchActivity"
     android:id="@+id/layout_search">
 
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar1"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+    </android.support.design.widget.AppBarLayout>
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="0dp"
@@ -19,13 +36,13 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/appbar" />
 
     <LinearLayout
         android:id="@+id/linearLayoutDesc"
         android:layout_width="@dimen/width_0"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
         app:layout_constraintHorizontal_bias="0.0"
@@ -42,6 +59,7 @@
                 android:id="@+id/etBookTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/alegreya"
                 android:hint="@string/book_title"
                 android:inputType="text"
                 android:textColorHighlight="#000"
@@ -64,6 +82,7 @@
                 android:inputType="text"
                 android:textColorHighlight="#000"
                 android:textSize="@dimen/text_size"
+                android:fontFamily="@font/alegreya"
                 android:textStyle="bold" />
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
