--- a/app/src/main/res/layout/app_bar_index.xml
+++ b/app/src/main/res/layout/app_bar_index.xml
@@ -28,6 +28,10 @@
         android:id="@+id/content_result"
         layout="@layout/content_result" />
 
+    <include
+        android:id="@+id/content_result_idb"
+        layout="@layout/content_result_idb" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
