--- a/app/src/main/res/layout/content_index.xml
+++ b/app/src/main/res/layout/content_index.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".IndexActivity"
+    android:theme="@style/AppTheme.NoActionBar"
     tools:showIn="@layout/app_bar_index">
 
     <TextView
