--- a/app/src/main/res/layout/nav_header_index.xml
+++ b/app/src/main/res/layout/nav_header_index.xml
@@ -27,12 +27,16 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
+        android:textAlignment="textStart"
+        android:textColor="@android:color/white"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/tvEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="textStart"
+        android:textColor="@android:color/white"
         android:text="@string/nav_header_subtitle" />
 
 </LinearLayout>
