--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -118,6 +118,38 @@
             android:background="@android:color/transparent"
             />
 
+        <ImageButton
+            android:id="@+id/imageButtonAddReview"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/ic_add_black_24dp"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toStartOf="@+id/imageButtonDelete"
+            app:layout_constraintTop_toTopOf="@+id/guideline10"
+            />
+
+        <ImageButton
+            android:id="@+id/imageButtonGR"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/goodreads_icon_32x32"
+            app:layout_constraintEnd_toStartOf="@+id/imageButtonAddReview"
+            app:layout_constraintTop_toTopOf="@+id/guideline10" />
+
+        <ImageButton
+            android:id="@+id/imageButtonIDB"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/idreambooks"
+            app:layout_constraintEnd_toStartOf="@+id/imageButtonGR"
+            app:layout_constraintTop_toTopOf="@+id/guideline10" />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
