--- a/app/src/main/res/layout/app_bar_index.xml
+++ b/app/src/main/res/layout/app_bar_index.xml
@@ -32,6 +32,10 @@
         android:id="@+id/content_result_idb"
         layout="@layout/content_result_idb" />
 
+    <include
+        android:id="@+id/content_fav"
+        layout="@layout/content_fav"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
