--- a/app/src/main/res/layout/book_item.xml
+++ b/app/src/main/res/layout/book_item.xml
@@ -150,6 +150,29 @@
             app:layout_constraintEnd_toStartOf="@+id/imageButtonGR"
             app:layout_constraintTop_toTopOf="@+id/guideline10" />
 
+        <ImageButton
+            android:id="@+id/imageButtonBH"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/ic_review"
+            app:layout_constraintEnd_toStartOf="@+id/imageButtonIDB"
+            app:layout_constraintTop_toTopOf="@+id/guideline10" />
+
+        <ImageButton
+            android:id="@+id/imageButtonAddFav"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/ic_favorite_border_black_24dp"
+            android:background="#ffffff"
+            app:layout_constraintBottom_toTopOf="@+id/guideline9"
+            app:layout_constraintEnd_toStartOf="@+id/ratingBar"
+            app:layout_constraintStart_toEndOf="@+id/imageButtonExpand" />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
