--- a/app/src/main/res/menu/activity_index_drawer.xml
+++ b/app/src/main/res/menu/activity_index_drawer.xml
@@ -12,6 +12,10 @@
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_profile"
             android:title="Profile" />
+        <item
+            android:id="@+id/nav_fav"
+            android:icon="@drawable/ic_favorite_black_24dp"
+            android:title="Favourites"/>
     </group>
 
     <item android:title="Communicate">
