hardcoded review and favourite page

--- a/app/src/main/res/layout/app_bar_index.xml
+++ b/app/src/main/res/layout/app_bar_index.xml
@@ -36,6 +36,10 @@
         android:id="@+id/content_fav"
         layout="@layout/content_fav"/>
 
+    <include
+        android:id="@+id/bh_content"
+        layout="@layout/bh_content"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
