--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -71,6 +71,7 @@
             android:layout_weight="1"
             android:text="@string/app_name"
             android:background="@drawable/rounded_button"
+            android:onClick="btnBHResult"
             />
     </LinearLayout>
 
