--- a/app/src/main/res/layout/content_administrator.xml
+++ b/app/src/main/res/layout/content_administrator.xml
@@ -12,8 +12,8 @@
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/button_height_55"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:background="@drawable/rounded_button"
         android:onClick="btnLastSearchedBooks"
@@ -25,30 +25,34 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/button_height_55"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="@dimen/margin_8"
-        android:layout_marginBottom="@dimen/margin_8"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="468dp"
         android:layout_weight="1"
         android:background="@drawable/rounded_button"
         android:onClick="btnLastConnectedUsers"
         android:text="Last connected users"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.761" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/button_height_55"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="152dp"
         android:background="@drawable/rounded_button"
         android:onClick="btnGenresOnClick"
         android:text="Books searched by domains"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
         app:layout_constraintStart_toEndOf="@+id/button2" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/button_height_55"
+        android:layout_marginEnd="28dp"
+        android:background="@drawable/rounded_button"
+        android:onClick="btnLoggingLatWeekOnClick"
+        android:text="Loggings on last week"
+        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
+        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
