--- a/app/src/main/res/layout/activity_add_genre.xml
+++ b/app/src/main/res/layout/activity_add_genre.xml
@@ -6,16 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".AddGenreActivity">
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="204dp"
-        android:text="Genre"
-        android:textSize="18sp"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbarGenre"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+    </android.support.design.widget.AppBarLayout>
+
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInputLayoutGenre"
@@ -23,13 +30,15 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6">
+        app:layout_constraintTop_toBottomOf="@+id/appbar">
 
         <EditText
+            android:id="@+id/etGenre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/etGenre"
             android:hint="Genre" />
     </android.support.design.widget.TextInputLayout>
 
