--- a/app/src/main/res/layout/activity_add_genre.xml
+++ b/app/src/main/res/layout/activity_add_genre.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbarGenre"
+            android:id="@+id/toolbarViewGenre"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
