--- a/app/src/main/res/layout/content_genres.xml
+++ b/app/src/main/res/layout/content_genres.xml
@@ -27,6 +27,7 @@
         android:layout_marginStart="148dp"
         android:layout_marginBottom="48dp"
         android:background="@drawable/rounded_button"
+        android:text="View Genres"
         app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintStart_toEndOf="@+id/button4"
         android:onClick="btnViewGenres"/>
